# bbgregressions

./: .gitignore  Dockerfile  LICENSE  README.md  config.yaml  config.yml  example.yml  example_config.ini  hello.py  pyproject.toml  regression_analysis.py  template.yml  utils_regressions.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
bbgregressions/: __init__.py  globals.py  main.py
bbgregressions/create_input/: addon.py  cleaner.py  formatter.py  main.py
bbgregressions/create_input/schemas/: globals.py
bbgregressions/src/: globals.py
bbgregressions/src/create_input/: formatter.py  main.py
bbgregressions/utils/: io.py
data/bladder/: 20250430_metadata_bladder.tsv
src/: globals.py  main.py
src/bbgregressions/: __init__.py  globals.py  main.py
src/bbgregressions/config_template/: main.py
src/bbgregressions/create_input/: addon.py  cleaner.py  compare.py  formatter.py  main.py
src/bbgregressions/plot/: plots.py  utils.py
src/bbgregressions/regressions/: linear_regressions.py  main.py  models.py  schema.py  utils.py
src/config_template/: main.py
src/create_input/: addon.py  cleaner.py  formatter.py  main.py
src/create_input/readers/: clonalstructure.py
src/create_input/schemas/: clonalstructure.py  globals.py
src/plot/: utils.py
src/regressions/: main.py  models.py  utils.py
src/utils/: io.py
test/input/: mutdensity_mb.non_protein_affecting.snv.tsv  mutdensity_mb.protein_affecting.snv.tsv  mutdensity_mb.tsv  omega.globalloc.no-multi.no-significance-thres.tsv  omega.no-globalloc.no-multi.no-significance-thres.tsv
(+90 files in other folders)
