[project]
name = "bbgregressions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "daiquiri>=3.4.0",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
]

# --- ADD THESE SECTIONS MANUALLY ---

# 1. This creates the 'bbgregressions' terminal command
[project.scripts]
bbgregressions = "bbgregressions.main:bbgregressions" 


# 2. This defines the build backend (Standard for uv projects)
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
